--- a/Tables Moles/src/main/AndroidManifest.xml
+++ b/Tables Moles/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
