--- a/Tables Moles/build.gradle
+++ b/Tables Moles/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile files('libs/json_simple-1.1.jar')
     compile files('libs/jtar-1.0.4.jar')
     compile files('libs/microsoft-translator-java-api-0.6-mod.jar')
+    compile 'com.roughike:bottom-bar:2.0.2'
+
 }
