--- a/Tables Moles/src/main/AndroidManifest.xml
+++ b/Tables Moles/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
  Copyright (C) 2008 ZXing authors
  Copyright 2011 Robert Theis
 
@@ -15,64 +16,75 @@
  limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="king.echomood.periodictable"
-    android:installLocation="preferExternal"
-    android:versionCode="33"
-    android:versionName="0.5.14">
+          package="king.echomood.periodictable"
+          android:installLocation="preferExternal"
+          android:versionCode="33"
+          android:versionName="0.5.14">
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="23" />
+        android:targetSdkVersion="23"/>
 
     <supports-screens
         android:largeScreens="true"
         android:normalScreens="true"
         android:smallScreens="true"
-        android:xlargeScreens="true" />
+        android:xlargeScreens="true"/>
 
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
     <uses-feature
         android:name="android.hardware.camera.flash"
-        android:required="false" />
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.screen.landscape" />
+        android:required="false"/>
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.screen.landscape"/>
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
-
-        <activity android:name=".First"
-            >
+        <activity android:name=".First">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".TableHome"
             android:label="@string/title_activity_table_home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".DetailActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".DetailActivity"
             android:parentActivityName=".TableHome">
+        </activity>
+        <activity
+            android:name=".Sulobility"
+            android:label="Sulobility"
+            android:parentActivityName=".TableHome"/>
+        <activity
+            android:name=".MolarCalculater"
+            android:label="MolarCalculater"
+            android:launchMode="singleTop"
+            android:parentActivityName=".TableHome">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/seach"
+                >
+
+            </meta-data>
+            </activity>
+        <activity android:name=".HomeContainer">
 
         </activity>
-        <activity android:name=".Sulobility"
-                  android:label="Sulobility"
-                  android:parentActivityName=".TableHome"
-            ></activity>
-        <activity android:name=".MolarCalculater"
-                  android:label="MolarCalculater"
-                  android:parentActivityName=".TableHome"></activity>
     </application>
 
 </manifest>
