--- a/Tables Moles/build.gradle
+++ b/Tables Moles/build.gradle
@@ -7,13 +7,13 @@ android {
 
     defaultConfig {
         applicationId "king.echomood.periodictable"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 23
     }
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles 'proguard.cfg'
         }
     }
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile files('libs/opencsv-2.3.jar')
+    compile 'com.opencsv:opencsv:3.8'
     compile 'com.roughike:bottom-bar:2.0.2'
 
 }
