--- a/Tables Moles/build.gradle
+++ b/Tables Moles/build.gradle
@@ -24,5 +24,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.opencsv:opencsv:3.8'
     compile 'com.roughike:bottom-bar:2.0.2'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
 
 }
